<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/create_task_meta_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/create_task_save_button"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/create_task_top_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/create_task_title_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/create_task_title_edittext"
                android:maxLength="20" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/create_task_date_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/create_task_date_edittext"
                android:inputType="date" />

            <EditText
                android:id="@+id/create_task_time_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_task_time_edittext"
                android:inputType="time" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/create_task_bottom_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/create_task_priority_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/create_task_priority_textview"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/create_task_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_task_priority_textview" >

                <RadioButton
                    android:id="@+id/radio_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_high" />

                <RadioButton
                    android:id="@+id/radio_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_medium" />

                <RadioButton
                    android:id="@+id/radio_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_low" />
            </RadioGroup>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/create_task_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/create_task_save_button" />

</RelativeLayout>