<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.group4bhw02.DisplayActivity" >

    <TextView
        android:id="@+id/displayActivity_title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/display_title_textView"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/middle_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_container"
        android:layout_below="@+id/displayActivity_title_textView"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:paddingBottom="40dp" >

        <TextView
            android:id="@+id/displayActivity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_placeholder" />

        <TextView
            android:id="@+id/displayActivity_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_placeholder" />

        <TextView
            android:id="@+id/displayActivity_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_placeholder" />

        <TextView
            android:id="@+id/DisplayActivity_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/priority_placeholder" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:padding="10dp" >

        <ImageButton
            android:id="@+id/displayActivity_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/displayActivity_delete_btn"
            android:src="@drawable/ic_action_edit" />

        <ImageButton
            android:id="@+id/displayActivity_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_action_discard" />
    </RelativeLayout>

</RelativeLayout>